Try to fixed cloudbuild support

--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -5,10 +5,22 @@ steps:
   args: ["push", "asia.gcr.io/$PROJECT_ID/bouncer"]
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
-  - 'replace'
+  - 'create'
   - 'configmap'
   - 'bouncer-nginx-conf'
-  - '--from-file=gcloud/nginx.conf=nginx.conf'
+  - '--from-file'
+  - 'gcloud/nginx.conf'
+  - '-o'
+  - 'yaml'
+  - '--dry-run'
+  - '>'
+  - 'nginx.yaml'
+- name: 'gcr.io/cloud-builders/kubectl'
+  args:
+  - 'replace'
+  - 'configmap'
+  - '-f'
+  - 'nginx.yaml'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=asia-east1-c'
   - 'CLOUDSDK_CONTAINER_CLUSTER=hypo'
