--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -15,6 +15,9 @@ steps:
   - '--dry-run'
   - '>'
   - 'nginx.yaml'
+  env:
+  - 'CLOUDSDK_COMPUTE_ZONE=asia-east1-c'
+  - 'CLOUDSDK_CONTAINER_CLUSTER=hypo'
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
   - 'replace'
