--- a/gcloud/cloudbuild.yaml
+++ b/gcloud/cloudbuild.yaml
@@ -13,17 +13,11 @@ steps:
   - '-o'
   - 'yaml'
   - '--dry-run'
-  - '>'
-  - 'nginx.yaml'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=asia-east1-c'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=hypo'
-- name: 'gcr.io/cloud-builders/kubectl'
-  args:
+  - '|'
+  - 'kubectl'
   - 'replace'
-  - 'configmap'
   - '-f'
-  - 'nginx.yaml'
+  - '-'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=asia-east1-c'
   - 'CLOUDSDK_CONTAINER_CLUSTER=hypo'
